tree-sitter-razor/test/corpus/code_blocks.txt
================================================================================
Empty code block
================================================================================

@code {
}

--------------------------------------------------------------------------------

(document
  (code_block))

================================================================================
Code block with content
================================================================================

@code {
    private int count = 0;
}

--------------------------------------------------------------------------------

(document
  (code_block
    (csharp_code)))

================================================================================
Functions block
================================================================================

@functions {
    public string GetMessage() { return "hello"; }
}

--------------------------------------------------------------------------------

(document
  (functions_block
    (csharp_code)))

================================================================================
Anonymous block
================================================================================

@{
    var message = "Hello";
}

--------------------------------------------------------------------------------

(document
  (razor_anonymous_block
    (csharp_code)))

================================================================================
Section block with HTML content
================================================================================

@section Scripts {
    <script></script>
}

--------------------------------------------------------------------------------

(document
  (section_block
    name: (identifier)
    (html_element
      (html_start_tag
        name: (tag_name))
      (html_end_tag
        name: (tag_name)))))

================================================================================
Code block with nested braces
================================================================================

@code {
    private void OnClick()
    {
        if (true) { count++; }
    }
}

--------------------------------------------------------------------------------

(document
  (code_block
    (csharp_code)))

================================================================================
Empty anonymous block
================================================================================

@{
}

--------------------------------------------------------------------------------

(document
  (razor_anonymous_block))

================================================================================
Empty functions block
================================================================================

@functions {
}

--------------------------------------------------------------------------------

(document
  (functions_block))
