tree-sitter-razor/test/corpus/comments.txt
================================================================================
Razor comment
================================================================================

@* This is a comment *@

--------------------------------------------------------------------------------

(document
  (razor_comment))

================================================================================
HTML comment
================================================================================

<!-- This is an HTML comment -->

--------------------------------------------------------------------------------

(document
  (html_comment))

================================================================================
Multiline razor comment
================================================================================

@*
  This is a
  multiline comment
*@

--------------------------------------------------------------------------------

(document
  (razor_comment))

================================================================================
Empty razor comment
================================================================================

@**@

--------------------------------------------------------------------------------

(document
  (razor_comment))

================================================================================
Comment between elements
================================================================================

<div></div>
@* comment *@
<span></span>

--------------------------------------------------------------------------------

(document
  (html_element
    (html_start_tag
      name: (tag_name))
    (html_end_tag
      name: (tag_name)))
  (razor_comment)
  (html_element
    (html_start_tag
      name: (tag_name))
    (html_end_tag
      name: (tag_name))))

================================================================================
HTML comment between elements
================================================================================

<div></div>
<!-- comment -->
<span></span>

--------------------------------------------------------------------------------

(document
  (html_element
    (html_start_tag
      name: (tag_name))
    (html_end_tag
      name: (tag_name)))
  (html_comment)
  (html_element
    (html_start_tag
      name: (tag_name))
    (html_end_tag
      name: (tag_name))))
