tree-sitter-razor/test/corpus/directives.txt
================================================================================
Page directive with route
================================================================================

@page "/counter"

--------------------------------------------------------------------------------

(document
  (directive_page
    (directive_argument)))

================================================================================
Page directive with route template
================================================================================

@page "/items/{id:int}"

--------------------------------------------------------------------------------

(document
  (directive_page
    (directive_argument)))

================================================================================
Model directive
================================================================================

@model MyViewModel

--------------------------------------------------------------------------------

(document
  (directive_model
    (directive_argument)))

================================================================================
Using directive
================================================================================

@using System.Collections.Generic

--------------------------------------------------------------------------------

(document
  (directive_using
    (directive_argument)))

================================================================================
Multiple using directives
================================================================================

@using System
@using System.Linq

--------------------------------------------------------------------------------

(document
  (directive_using
    (directive_argument))
  (directive_using
    (directive_argument)))

================================================================================
Inject directive
================================================================================

@inject NavigationManager Navigation

--------------------------------------------------------------------------------

(document
  (directive_inject
    (directive_argument)))

================================================================================
Implements directive
================================================================================

@implements IDisposable

--------------------------------------------------------------------------------

(document
  (directive_implements
    (directive_argument)))

================================================================================
Inherits directive
================================================================================

@inherits LayoutComponentBase

--------------------------------------------------------------------------------

(document
  (directive_inherits
    (directive_argument)))

================================================================================
Layout directive
================================================================================

@layout MainLayout

--------------------------------------------------------------------------------

(document
  (directive_layout
    (directive_argument)))

================================================================================
Namespace directive
================================================================================

@namespace MyApp.Pages

--------------------------------------------------------------------------------

(document
  (directive_namespace
    (directive_argument)))

================================================================================
Typeparam directive
================================================================================

@typeparam TItem

--------------------------------------------------------------------------------

(document
  (directive_typeparam
    (directive_argument)))

================================================================================
Attribute directive
================================================================================

@attribute [Authorize]

--------------------------------------------------------------------------------

(document
  (directive_attribute
    (directive_argument)))

================================================================================
Preservewhitespace directive
================================================================================

@preservewhitespace true

--------------------------------------------------------------------------------

(document
  (directive_preservewhitespace
    (directive_argument)))

================================================================================
Rendermode directive
================================================================================

@rendermode InteractiveServer

--------------------------------------------------------------------------------

(document
  (directive_rendermode
    (directive_argument)))

================================================================================
Multiple mixed directives
================================================================================

@page "/index"
@using Microsoft.AspNetCore.Components
@inject ILogger<Index> Logger

--------------------------------------------------------------------------------

(document
  (directive_page
    (directive_argument))
  (directive_using
    (directive_argument))
  (directive_inject
    (directive_argument)))
