tree-sitter-razor/test/corpus/expressions.txt
================================================================================
Explicit expression simple
================================================================================

@(DateTime.Now)

--------------------------------------------------------------------------------

(document
  (explicit_expression
    (csharp_expression)))

================================================================================
Explicit expression with method call
================================================================================

@(Model.GetName())

--------------------------------------------------------------------------------

(document
  (explicit_expression
    (csharp_expression)))

================================================================================
Explicit expression with string concatenation
================================================================================

@("Hello " + name)

--------------------------------------------------------------------------------

(document
  (explicit_expression
    (csharp_expression)))

================================================================================
Implicit expression simple
================================================================================

@currentCount

--------------------------------------------------------------------------------

(document
  (implicit_expression
    (implicit_expression_content)))

================================================================================
Implicit expression with property access
================================================================================

@Model.Title

--------------------------------------------------------------------------------

(document
  (implicit_expression
    (implicit_expression_content)))

================================================================================
Implicit expression with method call
================================================================================

@DateTime.Now.ToString()

--------------------------------------------------------------------------------

(document
  (implicit_expression
    (implicit_expression_content)))

================================================================================
Explicit expression with ternary
================================================================================

@(isActive ? "active" : "inactive")

--------------------------------------------------------------------------------

(document
  (explicit_expression
    (csharp_expression)))

================================================================================
Explicit expression with nested parens
================================================================================

@(items.Where(x => x.IsActive).Count())

--------------------------------------------------------------------------------

(document
  (explicit_expression
    (csharp_expression)))

================================================================================
Implicit expression with indexer
================================================================================

@items[0]

--------------------------------------------------------------------------------

(document
  (implicit_expression
    (implicit_expression_content)))

================================================================================
Implicit expression with null conditional
================================================================================

@Model?.Name

--------------------------------------------------------------------------------

(document
  (implicit_expression
    (implicit_expression_content)))
